いいね機能を非同期通信化

--- a/app/views/user/contents/show.html.erb
+++ b/app/views/user/contents/show.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
-  <%= render 'favorite' , content: @content %>
+  <div class="col-md-1 mb-3" , id="favorite_buttons_<%= @content.id %>" >
+    <%= render 'favorite' , content: @content %>
+  </div>
   <%= render 'show' , content: @content %>
   <div class="col-md-4">
     <div class="card">
