トップ画面のイラストを変更しました

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -27,20 +27,8 @@
         <a class="sub-belonging" href="https://storyset.com/internet">Internet illustrations by Storyset</a>
       </div>
       <div class="flex-grow">
-        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その1. <br>みんなのサ活を<br>見てみよう</h2>
+        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その１. <br>みんなのサ活を<br>見てみよう</h2>
         <p class="leading-relaxed text-base text-gray-500">　まずはページ下部のゲストログインから投稿しているサ活レビューをみてみよう</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-4">
-    <div class="mb-6 p-4 flex flex-col text-center items-center">
-      <div class="inline-flex items-center justify-center mb-5 flex-shrink-0">
-        <%= image_tag 'Computer login-bro.png', class: "img-fluid" %>
-        <a class="sub-belonging" href="https://storyset.com/user">User illustrations by Storyset</a>
-      </div>
-      <div class="flex-grow">
-        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その2. <br>ユーザ登録を<br>してみよう</h2>
-        <p class="leading-relaxed text-base text-gray-500">　ユーザ名とメールアドレスとパスワードでユーザ登録ができます<br>ユーザ登録すると、「サ活のレビュー」ができるようになります</p>
       </div>
     </div>
   </div>
@@ -51,8 +39,20 @@
         <a class="sub-belonging" href="https://storyset.com/social-media">Social media illustrations by Storyset</a>
       </div>
       <div class="flex-grow">
-        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その3. <br>日々のサ活を<br>レビューしよう</h2>
-        <p class="leading-relaxed text-base text-gray-500">　ユーザ登録を済ませたら、フッターの「投稿する」ボタンから自身の<br>サ活をレビューして投稿してみよう<br>投稿時のサウナ施設の入力はAPIを導入しているので予測変換ができます</p>
+        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その２. <br>日々のサ活を<br>レビューしよう</h2>
+        <p class="leading-relaxed text-base text-gray-500">　ユーザ登録をして、フッターの「投稿する」ボタンから自身のサ活をレビューして投稿してみよう</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="mb-6 p-4 flex flex-col text-center items-center">
+      <div class="inline-flex items-center justify-center mb-5 flex-shrink-0">
+        <%= image_tag 'Online popularity-bro.png', class: "img-fluid" %>
+        <a class="sub-belonging" href="https://storyset.com/online">Online illustrations by Storyset</a>
+      </div>
+      <div class="flex-grow">
+        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その３. <br>レビューにいいねやコメントをしよう</h2>
+        <p class="leading-relaxed text-base text-gray-500">　自分や他の人のレビューに<br>いいねやコメントができます<br>また、いいねやコメントをしたレビューはマイページから確認ができます</p>
       </div>
     </div>
   </div>
