--- a/app/views/user/contents/_favorite.html.erb
+++ b/app/views/user/contents/_favorite.html.erb
@@ -4,11 +4,11 @@
   </div>
   <div class="card-body">
     <% if content.favorited_by?(current_user) %>
-      <%= link_to content_favorites_path(content.id), method: :delete, remote: true, class: "text-danger" do %>
-        ♥<%= content.favorites.count %>
+      <%= link_to content_favorites_path(content.id), method: :delete, remote: true, class: "text-danger font-weight-bold text-decoration-none" do %>
+         ♥<%= content.favorites.count %>
       <% end %>
     <% else %>
-      <%= link_to content_favorites_path(content.id), method: :post, remote: true, class: "text-danger" do %>
+      <%= link_to content_favorites_path(content.id), method: :post, remote: true, class: "text-danger font-weight-bold text-decoration-none" do %>
         ♡<%= content.favorites.count %>
       <% end %>
     <% end %>
