--- a/app/views/user/users/_comment_index.html.erb
+++ b/app/views/user/users/_comment_index.html.erb
@@ -1,25 +1,57 @@
-<ul class="list-group">
-  <!--重複した投稿を表示しないための配列を定義。[]は空の配列を作成するための表記-->
-  <% displayed_content_ids = [] %>
-    <% if params[:id] %>
-      <% @user.comments.each do |comment| %>
-      <!--unless displayed_content_ids.include?で重複した投稿を含んでいないものかをチェック-->
-        <% unless displayed_content_ids.include?(comment.content.id) %>
-          <li class="list-group-item">
-            <%= link_to comment.content.title, content_path(comment.content) %>
-          </li>
-          <!--以下は、表示された投稿をdisplayed_content_ids配列に追加する処理。　<< はRubyの追加する演算子-->
-          <% displayed_content_ids << comment.content.id %>
-        <% end %>
-      <% end %>
-    <% else %>
-      <% current_user.comments.each do |comment| %>
-        <% unless displayed_content_ids.include?(comment.content.id) %>
-          <li class="list-group-item">
-            <%= link_to comment.content.title, content_path(comment.content) %>
-          </li>
-          <% displayed_content_ids << comment.content.id %>
-        <% end %>
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <% displayed_content_ids = [] %>
+    <% @user.comments.each do |content| %>
+      <% unless displayed_content_ids.include?(content.content.id) %>
+        <div class="card mb-4">
+          <div class="card-body">
+            <% if user_signed_in? %>
+              <h5 class="card-title mb-4">
+                <span class="text-muted"><%= content.created_at.strftime("%Y年%m月%d日") %></span><br>
+                <%= link_to content.content.title, content_path(content) %>
+              </h5>
+            <% end %>
+            <div class="row">
+              <div class="col-md-1"></div>
+              <div class="col-md-4 text-center">
+                <strong>ユーザ名:</strong> <br><%= content.user.name if content.user %><br>
+                <% if content.user.get_profile_image.present? %>
+                  <% if content.user == current_user && content.user.get_profile_image.present? %>
+                    <%= link_to myshow_path do %>
+                      <%= image_tag content.user.get_profile_image, size: "50x50", class: 'rounded-circle' %>
+                    <% end %>
+                  <% elsif content.user.get_profile_image.present? %>
+                    <%= link_to user_path(content.user.id) do %>
+                      <%= image_tag content.user.get_profile_image, size: "50x50", class: 'rounded-circle' %>
+                    <% end %>
+                  <% end %>
+                <% end %><br>
+              </div>
+              <div class="col-md-7">
+                <p class="card-text">
+                  <strong>訪問日:</strong> 
+                    <% if content.content.visit_day.present? %>
+                      <%= content.content.visit_day.strftime("%Y年%m月%d日") %>
+                    <% else %>
+                      <td></td>
+                    <% end %><br>
+                  <strong>タ　グ:</strong>
+                  <% content.content.tags.each do |tag| %>
+                    <%= link_to searches_path(tag_id: tag.id), class: "badge badge-primary", style: "opacity: 1;" do %>
+                      <%= tag.name %> 
+                    <% end %>
+                  <% end %>  <br>
+                  <strong>サウナ施設:</strong> <%= content.content.spot %>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% displayed_content_ids << content.content.id %>
       <% end %>
     <% end %>
-</ul>
+  </div>
+</div>
+
+<%= render 'user/contents/paginate', contents: @contents%>
+
