--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -42,6 +42,10 @@
               <%= link_to "ログイン", new_user_session_path %>
             </li>
           <% end %>
+        <% else %>
+            <div class="text-center text-xs">
+              <p style="font-size: 12px;" >© 2023 ととの〜る - Totono~ru - </p>
+            </div>
         <% end %>
       </ul>
     </div>
