利用規約とプライバシーポリシーの作成

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -36,10 +36,10 @@
             </li>
           <% else %>
             <li class="list-inline-item">
-              <%= link_to "新規登録", new_user_registration_path %>
+              <%= link_to "新規登録", new_user_registration_path , class: "text-dark" %>
             </li>
             <li class="list-inline-item">
-              <%= link_to "ログイン", new_user_session_path %>
+              <%= link_to "ログイン", new_user_session_path , class: "text-dark"%>
             </li>
           <% end %>
         <% else %>
