--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -66,6 +66,6 @@
 <hr class="my-2 border-b-1 border-bg-mitsuboshi-gray mt-5" />
 <div class="enter-btn text-center pb-8">
     <%= link_to "お問い合わせフォーム" , "https://forms.gle/odVjkTS2C3XXzyA79", target: :_blank, class: "text-dark" %>
-    <%= link_to "利用規約" , "https://forms.gle/odVjkTS2C3XXzyA79", target: :_blank, class: "text-dark" %>
-    <%= link_to "プライバシーポリシー" , "https://forms.gle/odVjkTS2C3XXzyA79", target: :_blank, class: "text-dark" %>
+    <%= link_to "利用規約" , terms_of_use_path , target: :_blank, class: "text-dark" %>
+    <%= link_to "プライバシーポリシー" , privacy_policy_path , target: :_blank, class: "text-dark" %>
 </div>
