--- a/app/views/user/searches/find.html.erb
+++ b/app/views/user/searches/find.html.erb
@@ -2,7 +2,7 @@
 <h3 class="pt-3">このページでは様々な検索ができます</h3>
 
   <div class="row mt-5">
-    <div class="col-sm-5">
+    <div class="col-md-5">
       <h6>〜<strong>投稿日</strong>または<strong>訪問日</strong>で検索ができます〜</h6>
   
       <%= form_with(url: searches_path, method: :get, local: true) do |f| %>
