ゲスト機能の制限「コメント機能」

--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class=col-10>
+    <div class="col-10 pb-5">
       <h4>新規でユーザ登録をする</h4>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "user/shared/error_messages", resource: resource %>
