軽微な修正を行いました

--- a/app/views/user/users/_mypage.html.erb
+++ b/app/views/user/users/_mypage.html.erb
@@ -56,7 +56,7 @@
 <% end %>
 
 <div class="text-center">
-  <ul class="flex">
+  <ul class="flex" style="padding-right: 40px;">
     <li class="tab tab-content  is-active">
       <%= t('views.user.users.content_index') %>
     </li>
