--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,8 @@
-#body-main {
+body {
   background-color: rgb(255, 195, 161);
+}
+
+#body-main {
   font-family: 'Kaisei HarunoUmi', serif;
   padding-bottom: 100px;
 }
