--- a/app/views/user/users/_comment_index.html.erb
+++ b/app/views/user/users/_comment_index.html.erb
@@ -50,5 +50,8 @@
         <% displayed_content_ids << content.content.id %>
       <% end %>
     <% end %>
+    
+      <%= paginate @contents %>
+
   </div>
 </div>
