--- a/app/views/user/contents/_paginate.html.erb
+++ b/app/views/user/contents/_paginate.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="offset-4">
+  <div class="col-md-4 offset-md-4">
     <div class="paginate">
       <%= paginate @contents %>
     </div>
