--- a/app/views/homes/terms_of_use.html.erb
+++ b/app/views/homes/terms_of_use.html.erb
@@ -1,4 +1,4 @@
-<div class="w-full max-w-md mt-10 mb-32">
+<div class="col-md-8 offset-md-2 mt-10 mb-32">
   <div class="text-center mb-3">
     <h1 class="text-lg font-bold tracking-wider mb-4">利用規約</h1>
   </div>
