--- a/app/views/user/contents/_show.html.erb
+++ b/app/views/user/contents/_show.html.erb
@@ -49,7 +49,13 @@
           <tr>
             <!--本文を改行込みで表示-->
             <th>本文</th>
-            <td><%=safe_join(@content.text.split("\n"),tag(:br))%></td>
+            <td>
+              <% if @content.text.length >= 9 %>
+                <%= safe_join(@content.text.split("\n"), tag(:br)) %>
+              <% else %>
+                <%= @content.text %>
+              <% end %>
+            </td>
           </tr>
         </tbody>
       </table>
