投稿一覧にいいね数とコメント数を表示

--- a/app/views/user/contents/_index.html.erb
+++ b/app/views/user/contents/_index.html.erb
@@ -5,7 +5,10 @@
         <div class="card-body">
           <% if user_signed_in? %>
             <h5 class="card-title mb-4">
-              <span class="text-muted"><%= content.created_at.strftime("%Y年%m月%d日") %></span><br>
+                <div class="d-flex justify-content-between">
+                  <span class="text-muted"><%= content.created_at.strftime("%Y年%m月%d日") %></span>
+                  ❤️ <%= content.favorites.count %> ️💬 <%= content.comments.count %>  <br>  
+                </div>
               <%= link_to content.title, content_path(content) %>
             </h5>
           <% end %>
