詳細画面でサウナ施設をリンク先として表示

--- a/app/views/user/contents/_show.html.erb
+++ b/app/views/user/contents/_show.html.erb
@@ -36,8 +36,9 @@
           </tr>
           <tr>
             <th>サウナ施設</th>
-            <td><%= @content.spot%></td>
-          </tr>
+            <td>
+              <%= link_to @content.spot, "https://www.google.com/maps/search/?api=1&query=#{CGI.escape(@content.spot)}", target: "_blank" %>
+            </td>
           <tr>
             <th>ととのい度</th>
             <td><%= render "user/contents/static_rate", content: content %></td>
