いいねが多い順のソート機能を追加

--- a/app/assets/stylesheets/responsive.css
+++ b/app/assets/stylesheets/responsive.css
@@ -97,5 +97,11 @@
     text-align: left;
   }
   
+  .user_profile {
+    white-space: nowrap; /* 改行を抑制 */
+    overflow: hidden; /* 内容をはみ出た部分を非表示 */
+    text-overflow: ellipsis; /* 省略記号で表示 */
+  }
+  
 }
 
