--- a/app/views/user/contents/_index.html.erb
+++ b/app/views/user/contents/_index.html.erb
@@ -15,6 +15,8 @@
           <small>「いいねが多い順」で表示中</small>
         <% elsif params[:sort] == 'comment_desc' %>
           <small>「コメントが多い順」で表示中</small>
+        <% elsif params[:sort] == 'random_list' %>
+          <small>「順不同」で表示中</small>
         <% else %>
           <small>「投稿が古い順」で表示中</small>
         <% end %>
@@ -26,6 +28,7 @@
         <%= link_to "ととのい度が低い順", contents_path(sort: 'rate_asc'), class: "btn btn-link mb-2 " %><br>
         <%= link_to "いいねが多い順", contents_path(sort: 'favorite_desc'), class: "btn btn-link mb-2 " %><br>
         <%= link_to "コメントが多い順", contents_path(sort: 'comment_desc'), class: "btn btn-link mb-2 " %><br>
+        <%= link_to "順不同", contents_path(sort: 'random_list'), class: "btn btn-link mb-2 " %><br>
       </div>
     </div>
   </div>
