管理者画面で各ユーザの新規登録日を追加

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -10,6 +10,10 @@
         <td><%= @user.name %></td>
       </tr>
       <tr>
+        <th scope="row">新規登録日</th>
+        <td><%= @user.created_at.strftime("%Y年%m月%d日") %></td>
+      </tr>
+      <tr>
         <th scope="row">メールアドレス</th>
         <td><%= @user.email %></td>
       </tr>
