--- a/app/views/user/searches/index.html.erb
+++ b/app/views/user/searches/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col">
     <% if @tag.nil? %>
-      <h2>指定した日付けの投稿一覧を表示しています</h2>
+      <h2><%= @start_date.strftime("%Y年%m月%d日") %>から<%= @end_date.strftime("%Y年%m月%d日") %>の投稿一覧を表示しています</h2>    
     <% elsif @tag.present? && @tag.contents.empty? %>
       <h2 class="text-danger text-center mt-md-5">現在、指定のタグが付与されたレビューはありません</h2>
     <% else %>
