日付検索で日付けを指定せずに実行した時の処理を修正

--- a/app/views/user/contents/index.html.erb
+++ b/app/views/user/contents/index.html.erb
@@ -1,3 +1,11 @@
-<%= render 'index', contents: @contents %>
+<div class="row">
 
-<%= render 'paginate', contents: @contents%>
+    <%= render 'sort_list' %>
+    
+    <div class="col-md-8">
+       <%= render 'index', contents: @contents %>
+    </div>
+  
+    <%= render 'paginate', contents: @contents%>
+
+</div>
